--- a/portfolio/html/contact.html
+++ b/portfolio/html/contact.html
@@ -15,11 +15,11 @@
       
       <nav>
         <ul>
-          <li><a href="/s">Home</a></li>
-          <li><a href="/inro.html">My intro</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="/blog.html">Blog</a></li>
-          <li><a href="/contact.html">Contact Me</a></li>
+          <li><a href="./mainpage.html">Home</a></li>
+          <li><a href="./intro.html">My intro</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./blog.html">Blog</a></li>
+          <li><a href="./contact.html">Contact Me</a></li>
           
         </ul>
       </nav>
