--- a/portfolio/html/intro.html
+++ b/portfolio/html/intro.html
@@ -14,11 +14,11 @@
       
       <nav>
         <ul>
-          <li><a href="/s">Home</a></li>
-          <li><a href="/intro.html">My intro</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="/blog.html">Blog</a></li>
-          <li><a href="/contact.html">Contact Me</a></li>
+          <li><a href="./mainpage.html">Home</a></li>
+          <li><a href="./intro.html">My intro</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./blog.html">Blog</a></li>
+          <li><a href="./contact.html">Contact Me</a></li>
           
         </ul>
       </nav>
@@ -30,8 +30,14 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A tempora fugit debitis culpa quibusdam accusamus dolores asperiores ut. Harum quisquam quis ex sed fugit. Ullam, sint. Ipsam quidem minima placeat, quam veritatis tenetur nesciunt obcaecati nisi tempore iure magni velit eum. Earum possimus veritatis iusto exercitationem quas voluptatibus id labore voluptatem cupiditate, reiciendis delectus nulla eos ut numquam libero neque ipsam quo dolore cumque deleniti eligendi distinctio in molestias recusandae. Distinctio natus dicta explicabo deserunt adipisci tempora necessitatibus soluta nisi repudiandae! Ab accusantium illum voluptate quos illo nostrum doloremque obcaecati?</p>
             <h2>My Skills</h2>
             <div class="skillcontainer">
-              HTML:<div class="skill"></div>
+              <div class="skillItem"></div>HTML:<div class="skill seventyfive"></div>
+              <div class="skillItem"></div>CSS:<div class="skill seventyfive"></div>
+              <div class="skillItem"></div>C:<div class="skill fifty"></div>
+              <div class="skillItem"></div>c++:<div class="skill fifty"></div>
+              <div class="skillItem"></div>JavaScript:<div class="skill t5"></div>
+              <div class="skillItem"></div>Python:<div class="skill t5"></div>
               </div>
+
           </div>
       </div>
     </div>
