--- a/portfolio/html/intro.html
+++ b/portfolio/html/intro.html
@@ -14,7 +14,7 @@
       
       <nav>
         <ul>
-          <li><a href="./mainpage.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./intro.html">My intro</a></li>
           <li><a href="./services.html">Services</a></li>
           <li><a href="./blog.html">Blog</a></li>
