--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         
       </div>
-      <div class="right"><img src="./My project (1).png" alt=""Yojjal Sharma></div>
+      <div class="right"><img src="./photos/My project (1).png" alt=""Yojjal Sharma></div>
     </div>
     
   </body>
